Bug 826846 - B2G: Crash in loop if reinstall existing packaged app. r=jdm