netwerk/ipc/RemoteOpenFileParent.cpp
@@ -50,7 +50,7 @@ RemoteOpenFileParent::RecvAsyncOpenFile()
   if (NS_SUCCEEDED(rv)) {
     int fd = open(path.get(), O_RDONLY);
     if (fd != -1) {
-      unused << SendFileOpened(FileDescriptor(fd), NS_OK);
+      unused << SendFileOpened(FileDescriptor(fd));
       // file handle needs to stay open until it's shared with child (and IPDL
       // is async, so hasn't happened yet). Close in destructor.
       mFd = fd;
@@ -60,7 +60,8 @@ RemoteOpenFileParent::RecvAsyncOpenFile()
 
   // Note: sending an invalid file descriptor currently kills the child process:
   // but that's ok for our use case (failing to open application.jar).
-  unused << SendFileOpened(FileDescriptor(mFd), NS_ERROR_NOT_AVAILABLE);
+  printf_stderr("RemoteOpenFileParent: file '%s' was not found!\n", path.get());
+  unused << SendFileDidNotOpen();
 #endif // OS_TYPE
 
   return true;
